# react-native-webrtc-vad

./: .gitignore  README.md  RNWebrtcVad.podspec  index.js  package.json
android/: CMakeLists.txt  build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: VoiceActivityDetector.cpp  VoiceActivityDetector.extern.cpp  VoiceActivityDetector.h
android/src/main/java/com/guilded/gg/: AudioInputController.java  RNWebrtcVadModule.java  RNWebrtcVadPackage.java
ios/: AudioInputController.h  AudioInputController.m  RNWebrtcVad.h  RNWebrtcVad.m  RNWebrtcVad.podspec  VoiceActivityDetector.h  VoiceActivityDetector.m
ios/RNWebrtcVad.xcodeproj/: project.pbxproj
ios/RNWebrtcVad.xcodeproj/xcshareddata/xcschemes/: RNWebrtcVad.xcscheme
webrtcvad/: VoiceActivityDetector.m
